technical(mcUserService): add java 21 feature and model mapper